// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`counter name valid 1`] = `
{
  "resource": {
    "aws_dynamodb_table": {
      "TheAmazing-Counter_01": {
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wing-counter-The.Amazing-Counter_01-c83e5bd8",
      },
    },
  },
}
`;

exports[`counter name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The.Amazing-Counter_01": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The.Amazing-Counter_01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed atomic counter",
                  "title": "Counter",
                },
                "id": "The.Amazing-Counter_01",
                "path": "root/Default/The.Amazing-Counter_01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`counter with initial value 1`] = `
{
  "resource": {
    "aws_dynamodb_table": {
      "Counter": {
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wing-counter-Counter-c824ef62",
      },
    },
  },
}
`;

exports[`counter with initial value 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Counter": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Counter/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed atomic counter",
                  "title": "Counter",
                },
                "id": "Counter",
                "path": "root/Default/Counter",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`default counter behavior 1`] = `
{
  "resource": {
    "aws_dynamodb_table": {
      "Counter": {
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wing-counter-Counter-c824ef62",
      },
    },
  },
}
`;

exports[`replace invalid character from counter name 1`] = `
{
  "resource": {
    "aws_dynamodb_table": {
      "TheAmazingCounter01": {
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wing-counter-The-Amazing-Counter-01-c848151b",
      },
    },
  },
}
`;

exports[`replace invalid character from counter name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The*Amazing%Counter@01": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The*Amazing%Counter@01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed atomic counter",
                  "title": "Counter",
                },
                "id": "The*Amazing%Counter@01",
                "path": "root/Default/The*Amazing%Counter@01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
